[package]
name = "shell-commands-freq"
version = "0.1.1"
authors = ["Maarifa Maarifa"]
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["shell", "bash", "fish", "zsh"]
edition = "2021"
repository = "https://github.com/MaarifaMaarifa/shell-commands-freq"
description = """
A simple program to check your shell's commands frequency based on how many times your entered them.
"""

[profile.release]
strip = true
lto = true

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }